--- a/etms_portal/etms_app/templates/index.html
+++ b/etms_portal/etms_app/templates/index.html
@@ -7,17 +7,9 @@
     <title>Helmet Inventory Management System</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="{% static 'design.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 
     <style>
-      body {
-        font-family: 'Poppins', sans-serif;
-        margin: 0;
-        padding: 0;
-        height: 100vh;
-        display: flex;
-      }
-      
       /* Header styling */
       .header-bar {
         background-color: #E7ECEF;
@@ -32,6 +24,10 @@
         align-items: center;
       }
 
+      .navbar-toggler-icon {
+      filter: invert(48%) sepia(25%) saturate(745%) hue-rotate(174deg) brightness(88%) contrast(87%);
+  }
+
       /* Sidebar styling */
       .sidebar {
         width: 250px;
@@ -45,6 +41,12 @@
         transition: transform 0.3s ease;
         transform: translateX(-100%);
         z-index: 1050;
+      }
+
+      .sidebar .nav-link.active, .sidebar .nav-link:hover {
+        background-color: #6096BA;
+        color: white;
+         border-radius: 5px;
       }
 
       /* Main content styling */
@@ -73,7 +75,7 @@
 
     <!-- Sidebar Navigation -->
     <div class="sidebar" id="sidebar">
-      <h4 style="color: #6096BA;">Navigation</h4>
+      <h4 style="color: rgba(96, 150, 186, 255);">Navigation</h4>
       <ul class="nav flex-column">
         <li class="nav-item">
           <a class="nav-link {% if current_tab == 'dashboard' %}active{% endif %}" href="/dashboard">Dashboard</a>
